# canvas

./: .dependency-cruiser.js  .eslintrc.cjs  .gitignore  AGENTS.md  ARCHITECTURAL_REMEDIATION_PLAN.md  ARCHITECTURE.md  CANVAS _MASTER_BLUEPRINT.md  CANVAS_COMPONENT_AUDIT.md  CANVAS_IMPLEMENTATION_PROGRESS.md  CHANGELOG.md  CLAUDE.md  CONNECTOR_DRAG_FIX.md  DEVELOPER_HANDOFF.md  DEVELOPER_HANDOVER.md  DRAG_BUG_FIX.md  FIGMA_MINDMAP_IMPLEMENTATION.md  FIGMA_TABLE_IMPLEMENTATION.md  FIXES_SUMMARY.md  INTEGRATION_SUMMARY.md  ISSUES.txt  LARGE_FILE_REFACTORING_MASTER_PLAN.md  MINDMAP_IMPLEMENTATION_SUMMARY.md  Makefile  PHASE_5_COMPLETION.md  PRODUCTION_IMPLEMENTATION_SUMMARY.md  README.md  RectangleTool_backup.tsx  SECURITY_CSP_HARDENING.md  SELECTION_MODULE_IMPLEMENTATION_PLAN.md  SELECTION_MODULE_MODULARIZATION_PLAN.md  clear-storage.html  debug-mindmap-drag.html  debug-pan-tool.js  debug-text-issue.html  index.html  lint_output.txt  manual-pan-test.js  marquee_handoff.md  memory_graph.json  memory_graph_status.md  (+26 more)
.claude/: settings.local.json
.dependency-cache/: canvas-edges.tsv  depcruise-canvas-focused.dot  depcruise-canvas.dot  depcruise-canvas.json  depcruise-canvas.metrics.txt  depcruise-src-focused.dot  depcruise-src.dot  depcruise-src.json  depcruise-src.metrics.txt  src-edges.tsv
.github/: CODEOWNERS  pull_request_template.md
docs/: Advanced Features.md  CHANGELOG.md  README.md  Technical Blueprint.md  canvas refactor.md  canvas-hardening-plan.md  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
(+416 files in other folders)
